add api to update a workspace
