# swagger/swagger.json
@@ -1061,6 +1061,20 @@
 				},
 				"type": "object"
 			},
+			"server.updateWorkspaceRequest": {
+				"properties": {
+					"timezone": {
+						"type": "string"
+					},
+					"website": {
+						"type": "string"
+					},
+					"workspace_name": {
+						"type": "string"
+					}
+				},
+				"type": "object"
+			},
 			"server.uploadImageResponse": {
 				"properties": {
 					"message": {
@@ -2576,6 +2590,76 @@
 			}
 		},
 		"/workspaces": {
+			"patch": {
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/server.updateWorkspaceRequest"
+							}
+						}
+					},
+					"description": "request body to create a workspace",
+					"required": true,
+					"x-originalParamName": "message"
+				},
+				"responses": {
+					"200": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/server.fetchWorkspaceResponse"
+								}
+							}
+						},
+						"description": "OK"
+					},
+					"400": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/server.APIStatus"
+								}
+							}
+						},
+						"description": "Bad Request"
+					},
+					"401": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/server.APIStatus"
+								}
+							}
+						},
+						"description": "Unauthorized"
+					},
+					"404": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/server.APIStatus"
+								}
+							}
+						},
+						"description": "Not Found"
+					},
+					"500": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/server.APIStatus"
+								}
+							}
+						},
+						"description": "Internal Server Error"
+					}
+				},
+				"summary": "update workspace details",
+				"tags": [
+					"workspace"
+				]
+			},
 			"post": {
 				"requestBody": {
 					"content": {
